Creating Mother 1.5, with features inspired by FreeFrameGL
First proof of concept!